<resources>
    <string name="app_name">PlayerRemoteControl</string>
    <string name="btnYoutube">YOUTUBE</string>
    <string name="btnStandardPlayer">STANDARD</string>
    <string name="btnPause">PLAY/PAUSE</string>
    <string name="btnLeft">10s-</string>
    <string name="btnRight">10s+</string>
    <string name="btnFullscreen">Fullscreen</string>
    <string name="btnExit">Timer</string>
    <string name="btnSoundUp">+</string>
    <string name="btnSystemVolumeUp">+</string>
    <string name="btnSoundDown">-</string>
    <string name="btnSystemVolumeDown">-</string>
    <string name="btnSystemVolumeMute">X</string>
    <string name="NetControllerUnableToConnect">Unable to connect to Server</string>
    <string name="NetControllerConnected">Connected</string>
    <string-array name="controllerDropdown">
        <item>Open new video</item>
        <item>Shutdown computer</item>
        <item>Cancel shutdown</item>
    </string-array>
</resources>