<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorDarkTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="277dp"
        android:layout_marginEnd="1dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.556">

        <Button
            android:id="@+id/btnShiftLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnLeft" />

        <Button
            android:id="@+id/btnPause"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnPause" />

        <Button
            android:id="@+id/btnShiftRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnRight" />

    </LinearLayout>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnConnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnExit"
        app:layout_constraintEnd_toEndOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnFullscreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnFullscreen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/soundUp"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="1dp"
        android:text="@string/btnSoundUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <Button
        android:id="@+id/soundDown"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="1dp"
        android:text="@string/btnSoundDown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/soundUp" />




    <!--    <Button-->
<!--        android:id="@+id/soundUpInternal"-->
<!--        android:layout_width="50dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="250dp"-->
<!--        android:layout_marginStart="1dp"-->
<!--        android:text="@string/btnSoundUp"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/toolbar" />-->

<!--    <Button-->
<!--        android:id="@+id/soundDownInternal"-->
<!--        android:layout_width="50dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginEnd="1dp"-->
<!--        android:text="@string/btnSoundDown"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/soundUp" />-->

</androidx.constraintlayout.widget.ConstraintLayout>